...
 */
static NSString *const kSecureTokenRequestClassName = @"FIRSecureTokenRequest";

/** @var kIdentityToolkitSandboxHost
    @brief The host of Identity Toolkit sandbox server.
 */
static NSString *const kIdentityToolkitSandboxHost = @"staging-www.sandbox.googleapis.com";

/** @var kSecureTokenSandboxHost
    @brief The host of Secure Token Service sandbox server.
 */
static NSString *const kSecureTokenSandboxHost = @"staging-securetoken.sandbox.googleapis.com";

/** @var kGoogleServiceInfoPlists
    @brief a C-array of plist file base names of Google service info to initialize FIRApp.
 */
static NSString *const kGoogleServiceInfoPlists[] = {
  @"GoogleService-Info",
...
    [StaticContentTableViewSection sectionWithTitle:@"Versions" cells:@[
      [StaticContentTableViewCell cellWithTitle:@"FirebaseAuth"
                                          value:versionString(
          FirebaseAuthVersionStr, FirebaseAuthVersionNum)],
    ]],
    [StaticContentTableViewSection sectionWithTitle:@"API Hosts" cells:@[
      [StaticContentTableViewCell cellWithTitle:@"Identity Toolkit"
                                          value:APIHost(kIdentityToolkitRequestClassName)
                                         action:^{
        [weakSelf toggleAPIHostWithRequestClassName:kIdentityToolkitRequestClassName];
      }],
      [StaticContentTableViewCell cellWithTitle:@"Secure Token"
                                          value:APIHost(kSecureTokenRequestClassName)
                                         action:^{
        [weakSelf toggleAPIHostWithRequestClassName:kSecureTokenRequestClassName];
      }],
    ]],
    [StaticContentTableViewSection sectionWithTitle:@"Firebase Apps" cells:@[
      [StaticContentTableViewCell cellWithTitle:@"Active App"
                                          value:[self activeAppDescription]
                                         action:^{
        [weakSelf toggleActiveApp];
      }],
      [StaticContentTableViewCell cellWithTitle:@"Default App"
                                          value:[self projectIDForAppAtIndex:0]
...
                                          value:[self projectIDForAppAtIndex:1]
                                         action:^{
        [weakSelf toggleProjectForAppAtIndex:1];
      }],
    ]],
    [StaticContentTableViewSection sectionWithTitle:@"Keychain Access Groups" cells:@[
      [StaticContentTableViewCell cellWithTitle:@"Current Access Group"
                                          value:[AppManager auth].userAccessGroup ? [AppManager auth].userAccessGroup : @"[none]"
      ],
      [StaticContentTableViewCell cellWithTitle:@"Default Group"
                                          value:@"[none]"
                                         action:^{
                                           [[AppManager auth] useUserAccessGroup:nil error:nil];
                                           [self loadTableView];
...
                                          value:[self appCredentialString]
                                         action:^{
        [weakSelf clearAppCredential];
      }],
    ]],
    [StaticContentTableViewSection sectionWithTitle:@"Language" cells:@[
      [StaticContentTableViewCell cellWithTitle:@"Auth Language"
                                          value:[AppManager auth].languageCode ?: @"[none]"
                                         action:^{
        [weakSelf showLanguageInput];
      }],
      [StaticContentTableViewCell cellWithTitle:@"Use App language" action:^{
        [[AppManager auth] useAppLanguage];
        [weakSelf loadTableView];
      }],
    ]],
    [StaticContentTableViewSection sectionWithTitle:@"Auth Settings" cells:@[
      [StaticContentTableViewCell cellWithTitle:@"Disable App Verification (Phone)"
                                          value:[AppManager auth].settings.
                                              appVerificationDisabledForTesting ? @"Yes" : @"No"
                                         action:^{
        [weakSelf toggleDisableAppVerification];
        [weakSelf loadTableView];
      }],
...
