...
/** @var kTokenRefreshErrorAlertTitle
    @brief The title of the "Token Refresh error" alert.
 */
static NSString *const kTokenRefreshErrorAlertTitle = @"Get Token Error";

/** @var kSettingsButtonTextDesription
    @brief The description for the text of the "Settings" button.
 */
static NSString *const kSettingsButtonTextDesription =
    @"The button text to open sample app settings";

/** @var kUserInfoButtonText
    @brief The text of the "Show User Info" button.
...
/** @var kReAuthenticateEmail
    @brief The text of the "Reathenticate Email" button.
 */
static NSString *const kReauthenticateEmailText = @"Reauthenticate Email/Password";

/** @var kOKButtonText
    @brief The text of the "OK" button for the Sign In result dialogs.
 */
static NSString *const kOKButtonText = @"OK";

/** @var kSetDisplayNameTitle
    @brief The title of the "Set Display Name" error dialog.
 */
...
