"FIREBASE_LOCALE_STRING" = "en";

