...
                        <subviews>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="1sp-53-Fq2">
                                <rect key="frame" x="0.0" y="20" width="414" height="667"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Verification Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IdT-2g-OHS">
                                        <rect key="frame" x="0.0" y="0.0" width="414" height="95.333333333333329"/>
                                        <accessibility key="accessibilityConfiguration" identifier="verification-label-banner"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                        <nil key="textColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tuR-ox-JKe">
                                        <rect key="frame" x="0.0" y="95.333333333333343" width="414" height="95.333333333333343"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                        <state key="normal" title="Show Regular Banner View"/>
                                        <connections>
                                            <action selector="showRegularBannerTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="0Lv-Md-RGu"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OdV-sK-hN2">
                                        <rect key="frame" x="0.0" y="190.66666666666666" width="414" height="95.333333333333343"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                        <state key="normal" title="Without Image"/>
                                        <connections>
                                            <action selector="showBannerViewWithoutImageTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="HRI-rM-P77"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eqR-qV-6QA">
                                        <rect key="frame" x="0.0" y="286" width="414" height="95"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                        <state key="normal" title="With Wide Image"/>
                                        <connections>
                                            <action selector="showBannerViewWithWideImageTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="vWg-y6-usw"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5lo-cz-mMm">
                                        <rect key="frame" x="0.0" y="381" width="414" height="95.333333333333314"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                        <state key="normal" title="With Thin Image"/>
                                        <connections>
                                            <action selector="showBannerViewWithNarrowImageTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="GMU-k5-ECE"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gvO-6a-zu2">
                                        <rect key="frame" x="0.0" y="476.33333333333331" width="414" height="95.333333333333314"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                        <state key="normal" title="With Large Body Text"/>
                                        <connections>
                                            <action selector="showBannerViewWithLargeBodyTextTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="c7d-hN-EnM"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZhT-VP-zCp">
                                        <rect key="frame" x="0.0" y="571.66666666666663" width="414" height="95.333333333333371"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                        <state key="normal" title="With Long Title"/>
                                        <connections>
                                            <action selector="showBannerViewWithLongTitleTextTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="nKO-LN-iNn"/>
                                        </connections>
                                    </button>
                                </subviews>
                            </stackView>
...
                            <constraint firstItem="1sp-53-Fq2" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="5cV-mf-DA3"/>
                            <constraint firstItem="1sp-53-Fq2" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Klu-61-G0K"/>
                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="1sp-53-Fq2" secondAttribute="bottom" id="m8X-BL-WyI"/>
                            <constraint firstItem="1sp-53-Fq2" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" id="qI1-dX-8ui"/>
                        </constraints>
                    </view>
                    <tabBarItem key="tabBarItem" title="Banner Messages" id="lmF-KU-1Kz"/>
                    <connections>
                        <outlet property="verifyLabel" destination="IdT-2g-OHS" id="8M6-6a-FCQ"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
...
