...
                    <view key="view" contentMode="scaleToFill" id="vRb-yf-OWE">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="VfB-vw-7up">
                                <rect key="frame" x="5" y="47" width="60" height="60"/>
                                <accessibility key="accessibilityConfiguration" identifier="banner-image-view" label="In-app message image">
                                    <bool key="isElement" value="YES"/>
                                </accessibility>
                                <constraints>
                                    <constraint firstAttribute="width" constant="60" id="VeB-9w-mcK"/>
                                    <constraint firstAttribute="height" constant="60" id="YXP-HZ-CYR"/>
                                </constraints>
                            </imageView>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Messaging Title" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rzo-9i-rXZ">
                                <rect key="frame" x="70" y="47" width="324" height="20.333333333333329"/>
                                <accessibility key="accessibilityConfiguration" identifier="banner-message-title-view"/>
                                <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="message body" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GOK-vx-mU8">
                                <rect key="frame" x="70" y="75.333333333333343" width="324" height="286.66666666666663"/>
                                <accessibility key="accessibilityConfiguration" identifier="banner-body-label"/>
                                <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                        <accessibility key="accessibilityConfiguration" identifier="banner-mode-uiview"/>
                        <constraints>
                            <constraint firstItem="GOK-vx-mU8" firstAttribute="trailing" secondItem="rzo-9i-rXZ" secondAttribute="trailing" id="7F2-Ym-Zcr"/>
                            <constraint firstItem="GOK-vx-mU8" firstAttribute="top" secondItem="rzo-9i-rXZ" secondAttribute="bottom" constant="8" id="7UW-P0-lff"/>
                            <constraint firstItem="K7E-8I-Yw5" firstAttribute="top" secondItem="GOK-vx-mU8" secondAttribute="bottom" constant="500" placeholder="YES" id="98u-DD-WbS">
                                <variation key="heightClass=compact" constant="300"/>
                            </constraint>
...
